@@ -129,8 +129,7 @@ typedef struct slurm_gres_ops {
 						  uint32_t cpu_cnt );
 	int		(*job_dealloc)		( void *job_gres_data,
 						  void *node_gres_data,
-						  int node_offset,
-						  uint32_t cpu_cnt );
+						  int node_offset );
 } slurm_gres_ops_t;
 
 typedef struct slurm_gres_context {
@@ -1370,7 +1369,7 @@ fini:	/* Insure that every gres plugin is called for unpack, even if no data
 	for (i=0; i<gres_context_cnt; i++) {
 		if (gres_context[i].unpacked_info)
 			continue;
-		error("gres_plugin_job_state_unpack: no info packed for %s "
+		debug("gres_plugin_job_state_unpack: no info packed for %s "
 		      "by job %u",
 		      gres_context[i].gres_type, job_id);
 		rc2 = (*(gres_context[i].ops.job_state_unpack))
@@ -1520,11 +1519,10 @@ extern int gres_plugin_job_alloc(List job_gres_list, List node_gres_list,
  * IN node_gres_list - node's gres_list built by
  *		gres_plugin_node_config_validate()
  * IN node_offset - zero-origin index to the node of interest
- * IN cpu_cnt - number of CPUs allocated to this job on this node
  * RET SLURM_SUCCESS or error code
  */
 extern int gres_plugin_job_dealloc(List job_gres_list, List node_gres_list, 
-				   int node_offset, uint32_t cpu_cnt)
+				   int node_offset)
 {
 	int i, rc, rc2;
 	ListIterator job_gres_iter,  node_gres_iter;
@@ -1556,8 +1554,7 @@ extern int gres_plugin_job_dealloc(List job_gres_list, List node_gres_list,
 				continue;
 			rc2 = (*(gres_context[i].ops.job_dealloc))
 					(job_gres_ptr->gres_data, 
-					 node_gres_ptr->gres_data, node_offset,
-					 cpu_cnt);
+					 node_gres_ptr->gres_data, node_offset);
 			if (rc2 != SLURM_SUCCESS)
 				rc = rc2;
 			break;
